--- a/projects/lights-out-solver/Cargo.toml
+++ b/projects/lights-out-solver/Cargo.toml
@@ -11,6 +11,10 @@ license = "MPL-2.0"
 edition = "2021"
 
 [dependencies]
+ndarray = "0.15.6"
+ndarray-linalg = "0.16.0"
+gen-iter = "0.3.0"
+latexify = "0.0.0"
 
 [dev-dependencies]
 
